Stopped clipping project screenshots. Linkified project screenshots. Finished project descriptions.

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -150,8 +150,7 @@ body {
 		}
 	}
 
-	section,
-	footer {
+	section {
 		text-align: center;
 		padding: 5%;
 		
@@ -189,6 +188,8 @@ body {
   	
 	footer {
 		color: @gray;
+		padding: 2% 0;
+		text-align: center;
 	}
 }
 
