--- a/app/assets/stylesheets/home.less
+++ b/app/assets/stylesheets/home.less
@@ -214,11 +214,11 @@ body {
 		background-color: white;
 		color: @text;
 		margin-top: 2rem;
-		padding: 5% 15% 0 15%;
+		padding: 5% 15%;
 		text-align: left;
 
 		@media screen and (min-width: 50em) {
-			margin-top: 5rem;
+			margin-top: 6.8rem;
 		}
 		
 		h3 {
@@ -257,9 +257,7 @@ body {
   			width: 100%;
   			
   			.image {
-          border-top: 1px solid @gray;
-          border-left: 1px solid @gray;
-          border-right: 1px solid @gray;
+          border: 1px solid @gray;
           height: 40rem;
           width: 100%;
         }	
